--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 							<!-- IP Verticals -->
 							<article id="IPVerticals">
-								<h2 class="major">Data Engineer</h2>
+								<h2 class="major">Data Analyst</h2>
 								<h4>IP Verticals, India</h4>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>
@@ -91,7 +91,7 @@
 <!--Prometheus Services  -->
 
 <article id="PrometheusServices">
-		<h2 class="major">Data Engineer</h2>
+		<h2 class="major">Data Analyst</h2>
 		<h4>Prometheus Services, India</h4>
 		<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 		<p>I actively participated in foundational database management activities, where I contributed to the creation and optimization of database structures. This hands-on involvement laid the groundwork for my understanding of database architecture and optimization techniques.</p>
@@ -129,7 +129,7 @@
 										</p></article>
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Data Engineer</h2>
+								<h2 class="major">Data Analyst/Engineer</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<nav>
 									<ul>
